#43 POC level, send training and test data to client via websocket
